# Template_langchain

./: .gitignore  README.md  ollama.env  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/api/: app.py  middleware.py
app/api/routes/: home.py
app/src/api/: app.py
app/src/api/routes/: home.py
app/src/config/: logging.py  metrics.py  settings.py
app/src/docs/: example.md
app/src/prompts/: system.md
app/src/providers/: llm_provider.py  redis_provider.py  vector_provider.py
app/src/schemas/: chat_schema.py
app/src/services/: chat_service.py  ingest_service.py  rag_service.py  session_service.py
app/src/templates/: home.html
infra/: Docker-compose.yaml  Dockerfile
tests/: chat_testing.py
