[project]
name = "template-langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "santana",email = "sannt11na@sempreceub.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0, <3.14"
dependencies = [
    "langchain (>=1.2.14,<2.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-openai (>=1.0.0,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "langchain-core (>=1.2.24,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{ include = "template_langchain", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
